# super-clip

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  fix_main.py  implementation_plan.md  index.html  landing.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: UPDATES.md  index.html
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  clippy.toml  super-clip.exe.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_monitor.rs  commands.rs  database.rs  detect.rs  everything_search.rs  hooks.rs  main.rs  ocr.rs  ocr_preload.rs
src/components/: Dashboard.tsx  FloatImage.tsx  GlassSurface.tsx  IconButton.tsx  ImageOcrViewer.tsx  LazyCodeBlock.tsx  MinimalistView.tsx  OCRLayer.tsx  Onboarding.tsx  PromptModal.tsx  Settings.tsx  Tooltip.tsx
src/utils/: ocrPostprocess.ts
